--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
-<style>font-family: 'ZCOOL QingKe HuangYou', cursive;</style>
+<link rel="stylesheet" type="text/css" href="https://lyrylo.com/g/style.css">
 </head>
 <body>
 <p>这是lyrylo.com在Github上的部署网页</p>
