--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <head>
 <meta charset="utf-8">
 <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="https://lyrylo.com/g/style.css">
+<style>
+      body {
+        font-size: 30px;
+      }
+      div:nth-child(1) {
+        font-family: 'ZCOOL QingKe HuangYou', cursive;
+      }
+    </style>
 </head>
 <body>
-<p>这是lyrylo.com在Github上的部署网页</p>
+<div>这是lyrylo.com在Github上的部署网页</div>
 </body>
 </html>
