--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
 <style>
       body {
-        font-size: 30px;
+        font-size: 40px;
       }
       div:nth-child(1) {
         font-family: 'ZCOOL QingKe HuangYou', cursive;
@@ -12,6 +12,6 @@
     </style>
 </head>
 <body>
-<div>这是lyrylo.com在Github上的部署网页</div>
+<center><div>这是lyrylo.com在Github上的部署网页</div></center>
 </body>
 </html>
