--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&?family=Montserrat:wght@500" rel="stylesheet">
 <style>
       body {
         font-size: 40px;
@@ -9,9 +9,13 @@
       div:nth-child(1) {
         font-family: 'ZCOOL QingKe HuangYou', cursive;
       }
+      div:nth-child(2) {
+        font-family: 'Montserrat:wght@500', cursive;
+      }
     </style>
 </head>
 <body>
-<center><div>这是lyrylo.com在Github上的部署网页</div></center>
+<center><div>这是lyrylo.com在Github上的部署网页</div></center><br>
+<center><div>This is the deployment page of lyrylo.com on Github</div></center>
 </body>
 </html>
