--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-<center><div>这是lyrylo.com在Github上的部署网页</div></center><br>
+<center><div>这是lyrylo.com在Github上的部署网页</div></center>
 <center><div>This is the deployment page of lyrylo.com on Github</div></center>
 </body>
 </html>
