--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&?family=Montserrat:wght@500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500" rel="stylesheet">
 <style>
       body {
         font-size: 40px;
       }
       div:nth-child(1) {
-        font-family: 'ZCOOL QingKe HuangYou', cursive;
-      }
-      div:nth-child(2) {
         font-family: 'Montserrat:wght@500', cursive;
       }
     </style>
