--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
 <style>
       body {
         font-size: 40px;
       }
       div:nth-child(1) {
-        font-family: 'Montserrat:wght@500', cursive;
+       font-family: 'ZCOOL KuaiLe', cursive;', cursive;
       }
     </style>
 </head>
