--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-  404
+  <h1>404 The file you requested was not found！<h1> 
+  <h2>Why not visit <a href="https://lyrylo.com">LYRYBlog</a><h2>
  </body>
 </html>
