--- a/time.html
+++ b/time.html
@@ -99,7 +99,7 @@ body.terra .s2 {
     </style>
 </head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
+<script src="/snapjs.js"></script>
 <body class="wasp">
 <svg id="clock" viewBox="0 0 512 512" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
 <style>
