--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<title>NetRuo</title>
 <link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
 <style>
       body {
@@ -12,7 +13,7 @@
     </style>
 </head>
 <body>
-<center><div>这是lyrylo.com在Github上的部署网页</div></center><br>
-<center><div>This is the deployment page of lyrylo.com on Github</div></center>
+<center><div>这是netruo.com在Github上的部署网页</div></center><br>
+<center><div>This is the deployment page of netruo.com on Github</div></center>
 </body>
 </html>
