--- a/404/index.html
+++ b/404/index.html
@@ -106,7 +106,7 @@
 									<span class="btn-inner--icon"><i class="fa fa-chevron-left"></i></span>
 									<span class="btn-inner--text">返回上一页</span>
 								</a>
-								<a href="https://lyrylo.com" class="btn btn-white btn-icon mb-3 mb-sm-0">
+								<a href="https://netruo.com" class="btn btn-white btn-icon mb-3 mb-sm-0">
 									<span class="btn-inner--icon"><i class="fa fa-home"></i></span>
 									<span class="btn-inner--text">回到首页</span>
 								</a>
