--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-  <h1>404 The file you requested was not found！<h1> 
+  <meta http-equiv="refresh" content="5;url=../404/index.html">
  </body>
 </html>
