--- a/index.html
+++ b/index.html
@@ -1,20 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
+<!-- 
+    作者：筱健  初学html
+    修改：网若科技 | NETRuo
+    源码分享QQ群：1026574662
+    欢迎进来互相学习和交流
+    请保留版权，尊重作者的努力！
+ -->
+
 <head>
-<meta charset="utf-8">
-<title>网若科技 | NETRuo</title>
-<link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
-<style>
-      body {
-        font-size: 40px;
-      }
-      div:nth-child(1) {
-       font-family: 'ZCOOL KuaiLe', cursive;', cursive;
-      }
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/fa.min.css">
+    <title>网若科技 | NETRuo</title>
 </head>
+
 <body>
-<center><div>这是netruo.com在Github上的部署网页</div></center><br>
-<center><div>This is the deployment page of netruo.com on Github</div></center>
+    <div class="cc">
+        <img src="imgaes/1.png" alt="">
+        <span><i> </i> Coding~</span>
+        <span>网若科技 | NETRuo</span>
+        <span>现在多学一样本事，以后就能少说一句求人的话。</span>
+        <span>继续前进吧，路还有点远。</span>
+        <span>接下来的话慢慢说</span>
+        <ul>
+            <li title="官网">
+                <a href="#"><i class="fa fa-home" aria-hidden="true"></i></a>
+            </li>
+            <li title="博客">
+                <a href="https://blog.netruo.com" target="_blank "><i class="fa fa-quote-right" aria-hidden="true"></i></i></a>
+            </li>
+            <li title="待开发">
+                <a href="#"><i class="fa fa-hourglass-half" aria-hidden="true"></i></a>
+            </li>
+        </ul>
+
+    </div>
+
 </body>
+<!-- 
+    作者：筱健  初学html
+    修改：网若科技 | NETRuo
+    源码分享QQ群：1026574662
+    欢迎进来互相学习和交流
+    请保留版权，尊重作者的努力！ 
+-->
+
 </html>
